# reelsbot

./: .env.example  .gitignore  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  LICENSE  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  README_PHASE2.md  RUNBOOK.md  coverage.json  pyproject.toml  pytest.ini  test_foundation.py  test_phase2.py  verify_phase2.py
docs/: ARCHITECTURE.md  PHASE1_FOUNDATION.md  PHASE2_QUICKREF.md  PHASE3_VIDEO_GENERATION.md  privacy.html  terms.html
docs/archive/: FINAL_DELIVERY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_CHECKLIST.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  README_PHASE2.md  TEST_SUITE_SUMMARY.md
examples/: demo_video_generation.py  foundation_usage.py
policies/: blocked_terms.txt
prompts/: A_loop.txt  E_concept.txt  caption_en.txt  planner_system.txt  policy_system.txt
scripts/: install_ffmpeg.ps1  verify_phase3.py
src/reelsbot/: __init__.py  __main__.py  caption_generator.py  cli.py  config.py  llm_client.py  models.py  orchestrator.py  planner.py  policy_gate.py
src/reelsbot/editor/: __init__.py  ffmpeg_editor.py
src/reelsbot/generator/: __init__.py  base.py  ffmpeg_dummy.py
src/reelsbot/publisher/: __init__.py  base.py  dry_run.py
src/reelsbot/storage/: __init__.py  runs.py
src/reelsbot/utils/: __init__.py  brand_name.py  ffmpeg.py  image.py  logger.py  paths.py
tests/: README.md  conftest.py  test_brand_name.py  test_cli.py  test_config.py  test_e2e_integration.py  test_llm_client.py  test_logger.py  test_orchestrator.py  test_paths.py  test_phase3_integration.py  test_utils_ffmpeg.py  test_utils_image.py
