[project]
name = "reelsbot"
version = "0.1.0"
description = "Instagram Reels automation pipeline with abstract and fictional content generation"
authors = [{name = "aomizuki0307"}]
requires-python = ">=3.10"
dependencies = [
    # LLM APIs
    "anthropic>=0.18.1,<1.0.0",
    "openai>=1.0.0,<2.0.0",

    # CLI & config
    "click>=8.1.0,<9.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",

    # Video processing (ffmpeg wrapper)
    "ffmpeg-python>=0.2.0,<1.0.0",
    "pillow>=10.0.0,<11.0.0",

    # Data & storage
    "pyyaml>=6.0.0,<7.0.0",

    # Utilities
    "tenacity>=8.2.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "ruff>=0.2.0,<1.0.0",
    "black>=24.0.0,<25.0.0",
    "mypy>=1.8.0,<2.0.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/reelsbot --cov-report=term-missing"
asyncio_mode = "auto"
